# warp2

./: .gitignore  Cargo.toml  README.md  build.rs  warp2.h
.github/workflows/: build-linux.yml  build-win.yml
ctest/: CMakeLists.txt  main.cxx
gui/warp2/: .gitignore  README.md  pubspec.yaml
gui/warp2/android/app/: build.gradle
gui/warp2/android/app/src/main/: AndroidManifest.xml
gui/warp2/android/app/src/main/kotlin/com/example/warp2/: MainActivity.kt
gui/warp2/lib/: main.dart  warp2_ffi.dart  warp2_generated.dart
gui/warp2/macos/Runner.xcodeproj/: project.pbxproj
gui/warp2/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
gui/warp2/macos/Runner/Configs/: AppInfo.xcconfig
src/: api.rs  cash.z.wallet.sdk.rpc.rs  lib.rs  main.rs  sapling.rs  warp.rs
src/sapling/: hash.rs
src/warp/: bridge.rs  hasher.rs  scan.rs  tree.rs  witness.rs
